<resources>
    <string name="app_name">Anetax</string>

    <!-- nav bar -->
    <string name="title_add">Dodaj</string>
    <string name="title_scan">Skanuj Kod</string>
    <string name="title_list">Lista</string>
    <string name="title_export">Eksportuj</string>

    <!-- add product -->
    <string name="title_add_product">Nowy produkt</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="five_percent">5%</string>
    <string name="eight_percent">8%</string>
    <string name="twenty_three_percent">23%</string>
    <string name="barcode">Kod kreskowy</string>
    <string name="price_net">Cena netto</string>

    <string name="invalid_product_name">Musisz podać nazwę produktu</string>
    <string name="invalid_barcode">Kod produktu musi składać się z samych cyfr</string>
    <string name="invalid_tax_value">Musisz wybrać wartość podatku</string>
    <string name="invalid_price">Musisz podać poprawną cenę</string>

    <string name="successfully_added_new_product">Pomyślnie dodano nowy produkt.</string>


    <!-- product list -->
    <string name="title_product_list">Lista produktów</string>
    <string name="find_by_barcode_or_name">Nazwa lub kod kreskowy</string>
    <string name="open">Otwórz</string>
    <string name="no_products">Brak produktów</string>
    <string name="added_on"> dodany w dniu </string>
    <string name="you_cant_delete_last_position">Nie możesz usunąć ostatniej pozycji</string>
    <string name="you_cant_delete_last_price">Nie możesz usunąć ostatniej ceny</string>
    <string name="scanned_code">Nowy kod kreskowy</string>
    <string name="is_code_proper">Czy kod kreskowy zgadza się z tym na produkcie?</string>
    <string name="cancel">Anuluj</string>
    <string name="enter_new_product_name">Podaj nową nazwę produktu</string>
    <string name="price_list">Lista cen</string>
    <string name="add_price">Dodaj cenę</string>
    <string name="new_price">Nowa cena</string>
    <string name="enter_new_price">Podaj nową cenę</string>
    <string name="optional_field">To pole jest opcjonalne</string>
    <string name="price_margin">Ostateczna cena</string>
    <string name="new_margin_price">Nowa cena</string>
    <string name="net">Netto:</string>
    <string name="margin">Marża:</string>
    <string name="gross">Brutto:</string>
    <string name="title_files_export">Eksport plików</string>
    <string name="no_files">Brak plików</string>
    <string name="succesfully_deleted_file">Pomyslnie usunięto plik</string>
    <string name="delete_file_problem">Nie udało się usunąc pliku</string>
    <string name="export">eksport</string>
    <string name="successful_export">Pomyslnie wyeksportowano dane</string>


</resources>
