<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gross"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/margin"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/price_net_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10,00"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/price_gross_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10,00"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/price_margin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10,00"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="27-10-2017"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>